--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,34 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
+button{
+    padding:0.5rem 2rem 0.95rem 2rem;
+    cursor: pointer;
+    font-size: 1.1rem;
+    height: 2rem;
+    border: none;
+    border-radius: .71rem;
+    color: #ffffff;
+    background-color: #333;
+    outline: none;
+    box-shadow: 0 0.35rem rgba(121,121,121,0.65);
+}
+
+button:hover{
+    filter: brightness(112%);
+
+}
+
+button:active{
+    transform: translate(0,0.3rem);
+    box-shadow:0 0.1rem rgba(255,255,255,0.6)
+}
+
+.twitter-button:hover{
+    color: #38a1f3;
+}
+
+.fa-twitter{
+    font-size: 1.3rem;
+}
