--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,19 @@ button:active{
 .fa-twitter{
     font-size: 1.3rem;
 }
+
+/* Loader */
+
+.loader {
+    border: 8px solid #e5e3e3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height:60px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
